--- a/dog.scss
+++ b/dog.scss
@@ -550,3 +550,20 @@ a img {
   margin-top: 20px;
 }
 }
+
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("dog-outdoor.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
